Issue #660: Increase z-index of dropdown menu in mobile screen

--- a/app/styles/pages/common/_common-table-list.scss
+++ b/app/styles/pages/common/_common-table-list.scss
@@ -797,7 +797,7 @@
 
 @media (max-width: 767px) {
   .dropdown-menu {
-    z-index: 10 !important;
+    z-index: 15 !important;
     padding: 0;
   }
   .files {
